--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@stripe/stripe-js": "^7.3.1",
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
+    "e-commerce-store": "file:..",
     "framer-motion": "^12.15.0",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
